NAACP001/css/base.css
/* ... */
.submit-container ul li,
.submit-container p {
  color: #fff;
}
.bottom-info {
  bottom: 0;
  padding: 2em;
}

.bottom-info .row {
  flex-wrap: nowrap;
  padding-top: 2em;
}

.bottom-info .row {
  flex-wrap: wrap;
  padding-top: 2em;
}

.bottom-info h5 {
  font-family: "Verlag", serif;
  font-weight: 700;
  font-style: normal;
  font-size: 2em;
}

.bottom-info h6,
.bottom-info h5,
.bottom-info p {
  color: #fff;
  text-align: center;
  margin: 0;
}

.bottom-info h5 {
  color: var(--secondaryColor);
  font-family: var(--emphasisFont);
  font-size: 2.15rem;
}

.bottom-info h6,
.bottom-info p {
  color: white;
  text-align: center;
  margin: 0;
}

.bottom-info h6 {
  flex-basis: 100%;
  color: #fff;
}

.bottom-info h6 {
  line-height: 1.2em;
}

.bottom-info {
  background: var(--tertiaryColor);
}
.bottom-info {
  overflow: hidden;
  position: relative;
  border-radius: 4px;
}
.bottom-info .bottom-info-content {
  position: relative;
  z-index: 1;
}
.bottom-info .flair {
  height: 100%;
  width: 100%;
  position: absolute;
  overflow: hidden;
  height: 600px;
  left: 0px;
  top: -70px;
}
.bottom-info .bg-scribble {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  width: 1000px;
  transform: scale(2.5);
  fill: #1600d3;
}
.bottom-info .icon {
  display: none;
}

.bottom-info .icon {
  height: 25px;
}

.bottom-info .icon img {
  max-width: 25px;
  margin: auto;
  display: block;
}

.bottom-info img,
.bottom-info svg {
  max-width: 100%;
  margin: auto;
}

.bottom-info .row > div {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding: 0 5px;
}

.bottom-info.show-mobile .row > div {
  margin-top: 1em;
}

body form .fw-normal {
  font-weight: normal;
}

.seal img {
  max-width: 95px;
}

.terms {
  background-color: #fcfcfc;
  border: 1px solid #c7c7c7;
  padding: 10px;
  height: 100px;
  overflow-y: scroll;
}

.email-opt-in {
  width: 15px;
  height: 15px;
  align-self: flex-end;
  display: flex;
}

.submit {
  background-color: #122a4a;
  font-weight: bolder;
  border-color: #1a58a3;
  text-transform: uppercase;
  color: #fff;
}

@media screen and (min-width: 48em) {
  div.step-2 {
    margin-top: 5em;
  }
}

.step-2,
.step-3 {
  position: relative;
  margin-top: 10px;
  border-top: 1px solid rgba(0, 0, 0, 0.25);
}

.step-3 {
  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
}

.mobile-hero {
  width: 100%;
  background: url("../images/bg-2.webp") no-repeat center 90% / cover;
  width: 90%;
  margin: auto;
  min-height: 220px;
}

.mobile-hero-container {
  background: url("../images/purple-together.webp") no-repeat center top / 550px;
  width: 100%;
  height: 100%;
  padding: 4% 0 0;
}

.mobile-hero-scribble {
  width: 55%;
  fill: white;
  position: absolute;
  margin-top: -15px;
  left: 0;
}

.scribble {
  position: absolute;
}

footer {
  background-color: black;
  position: relative;
}

footer .scribble {
  width: 50%;
  fill: black;
  height: 50%;
  top: -12px;
  z-index: 1;
}

.footer-info {
  padding: 10px;
  position: relative;
  z-index: 2;
}

.footer-info p,
footer p {
  color: #fff;
  margin: 0;
}

footer a {
  color: #fff;
}

footer a:focus,
footer a:hover {
  color: #fff;
}

.cc-img {
  max-width: 200px;
  margin-bottom: 5px;
}

.donation-statement {
  font-size: 22px;
  margin-top: 15px;
  margin-left: 10%;
  line-height: 1.4em;
}

.donation-effect-list {
  color: var(--mainColor);
  max-width: 400px;
  margin: 0.75em auto 1em auto;
  font-size: 1em;
}

@media screen and (max-width: 767px) {
  .donation-effect-list {
    padding-left: 1em;
  }

  .donation-effect-list li {
    max-width: 80%;
  }
  .donation-statement {
    margin-left: 0;
  }
}

.donation-effect-list li::marker {
  font-size: 1.5em;
}

.mobile-seal {
  max-width: 50px;
  margin-top: -60px;
  right: 10px;
  position: absolute;
}

.total-donation-container {
  font-size: 100%;
  display: flex;
  margin-left: 10%;
}

.total-donation {
  order: 2;
  padding-left: 5px;
}

img[alt="CAPTCHA"] {
  max-width: 150px;
  height: auto;
}

/*///////ERRORS////////*/

.other-error {
  background-color: #f8f8f8;
  border-color: #c41e3a;
  color: #c41e3a;
}

.other-error #gift .donation-other input {
  border-color: #c41e3a;
}

.error-msg {
  color: #c41e3a;
  font-size: 100%;
}

label.error {
  color: #c41e3a;
}

input[type="checkbox"].error + div {
  background-color: red;
  padding: 2px;
}

.error label.accept-label {
  color: red;
}

/* .error + input {
    border: 2px solid #c41e3a;
} */

.error + img + input {
  border: 2px solid #c41e3a;
}

input.error,
select.error {
  border: 2px solid #c41e3a !important;
}
.captcha.error {
  color: #c41e3a;
}
/* .error input, .error select{
    border: 2px solid
    #c41e3a !important;
} */

@media screen and (min-width: 48em) {
  form header h1 span {
    min-width: 500px;
  }
  .step-counter {
    position: absolute;
    left: 0;
    right: 0;
    top: -22px;
    margin: auto;
  }

  .show-mobile {
    display: none;
  }

  .hide-mobile {
    display: block;
  }
}
/* ... */

